// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChannelList component snapshot empty list 1`] = `
<div
  className="channel-list"
>
  <div
    className="channel-list__header"
  >
    Olá 
    <strong
      className="channel-list__header__name"
    >
      xunda
    </strong>
    !
  </div>
  <div
    className="channel-list__section"
  >
    <div
      className="channel-list__section__title"
    >
      <span>
        Canais
      </span>
      <span
        className="plus"
        onClick={[Function]}
      >
        +
      </span>
    </div>
    <ul />
  </div>
</div>
`;

exports[`ChannelList component snapshot with channels 1`] = `
<div
  className="channel-list"
>
  <div
    className="channel-list__header"
  >
    Olá 
    <strong
      className="channel-list__header__name"
    >
      xunda
    </strong>
    !
  </div>
  <div
    className="channel-list__section"
  >
    <div
      className="channel-list__section__title"
    >
      <span>
        Canais
      </span>
      <span
        className="plus"
        onClick={[Function]}
      >
        +
      </span>
    </div>
    <ul>
      <li
        className="channel-list__item "
        onClick={[Function]}
      >
        <span
          className="channel-list__item__name"
        >
          # 
          channel 1
        </span>
      </li>
      <li
        className="channel-list__item "
        onClick={[Function]}
      >
        <span
          className="channel-list__item__name"
        >
          # 
          channel 2
        </span>
      </li>
      <li
        className="channel-list__item "
        onClick={[Function]}
      >
        <span
          className="channel-list__item__name"
        >
          # 
          channel 3
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ChannelList component snapshot with notifications 1`] = `
<div
  className="channel-list"
>
  <div
    className="channel-list__header"
  >
    Olá 
    <strong
      className="channel-list__header__name"
    >
      xunda
    </strong>
    !
  </div>
  <div
    className="channel-list__section"
  >
    <div
      className="channel-list__section__title"
    >
      <span>
        Canais
      </span>
      <span
        className="plus"
        onClick={[Function]}
      >
        +
      </span>
    </div>
    <ul>
      <li
        className="channel-list__item "
        onClick={[Function]}
      >
        <span
          className="channel-list__item__name"
        >
          # 
          channel 1
        </span>
        <span
          className="badge"
        >
          3
        </span>
      </li>
      <li
        className="channel-list__item "
        onClick={[Function]}
      >
        <span
          className="channel-list__item__name"
        >
          # 
          channel 2
        </span>
      </li>
      <li
        className="channel-list__item "
        onClick={[Function]}
      >
        <span
          className="channel-list__item__name"
        >
          # 
          channel 3
        </span>
        <span
          className="badge"
        >
          10
        </span>
      </li>
    </ul>
  </div>
</div>
`;
